Added email opt-out option.

--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -30,7 +30,7 @@
             <li><a href="{% url 'usage' %}">
                 Usage
             </a></li>
-            <li><a href="{% url 'account_profile' %}">
+            <li><a href="{% url 'user_profile' %}">
                 Profile
             </a></li>
             <li><a href="{% url 'account_logout' %}">
