--- a/users/templates/users/userprofile_form.html
+++ b/users/templates/users/userprofile_form.html
@@ -15,5 +15,15 @@
         <p>
             Your last login was {{ social_account.last_login }}
         </p>
+
+        <div>
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.as_p }}
+                </div>
+                <button type="submit" class="btn btn-default">Update</button>
+            </form>
+        </div>
     {% endfor %}
 {% endblock %}
